--- a/app/views/spree/admin/shared/_translations.html.erb
+++ b/app/views/spree/admin/shared/_translations.html.erb
@@ -4,13 +4,13 @@
                               :scope => 'date_picker',
                               :default => 'yy/mm/dd'),
     :abbr_day_names           => I18n.t(:abbr_day_names, :scope => :date),
-    :add                      => Spree.t(:add),
+    :add                      => I18n.t(:add, scope: :actions),
     :are_you_sure_delete      => Spree.t(:are_you_sure_delete),
     :bill_address             => I18n.t(:bill_address),
     :choose_a_customer        => Spree.t(:choose_a_customer),
     :confirm_delete           => Spree.t(:confirm_delete),
-    :cut                      => Spree.t(:cut),
-    :destroy                  => Spree.t(:destroy),
+    :cut                      => I18n.t(:cut, scope: :actions),
+    :destroy                  => I18n.t(:destroy, scope: :actions),
     :edit                     => Spree.t(:edit),
     :loading                  => Spree.t(:loading),
     :month_names              => I18n.t(:month_names, :scope => :date).reject(&:blank?),
@@ -19,13 +19,13 @@
     :datetime_ui_close_text   => I18n.t('datetime_picker_ui.close_text'),
     :datetime_ui_time_text    => I18n.t('datetime_picker_ui.time_text'),
     :name                     => Spree.t(:name),
-    :next                     => Spree.t(:next),
-    :paste                    => Spree.t(:paste),
-    :previous                 => Spree.t(:previous),
-    :remove                   => Spree.t(:remove),
-    :rename                   => Spree.t(:rename),
+    :next                     => I18n.t(:next),
+    :paste                    => I18n.t(:paste, scope: :actions),
+    :previous                 => I18n.t(:previous),
+    :remove                   => I18n.t(:remove),
+    :rename                   => I18n.t(:rename, scope: :actions),
     :sku                      => Spree.t(:sku),
-    :value                    => Spree.t(:value)
+    :value                    => I18n.t(:value)
   }.to_json
 %>
 </script>
