use white-space: nowrap on variant prices

--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -62,6 +62,7 @@
           @include breakpoint(phablet) {
             padding-left: 1rem;
           }
+          white-space: nowrap;
         }
 
         // Total price
