--- a/app/views/enterprises/_change_order_cycle.html.haml
+++ b/app/views/enterprises/_change_order_cycle.html.haml
@@ -4,7 +4,8 @@
       %div{"ng-if" => "closesInLessThan3Months()"}
         = t :enterprises_next_closing
         %strong {{ OrderCycle.orders_close_at() | date_in_words }}
-      %div.no-message-pad{"ng-if" => "!closesInLessThan3Months()"}
+      %div{"ng-if" => "!closesInLessThan3Months()"}
+        = t :enterprises_currently_open
     %div{"ng-if" => "!OrderCycle.selected()"}
       = t :enterprises_choose
 
