--- a/app/views/spree/admin/shipping_methods/_form.html.haml
+++ b/app/views/spree/admin/shipping_methods/_form.html.haml
@@ -47,6 +47,14 @@
     = render partial: 'spree/admin/shared/calculator_fields', locals: { f: f }
 
   .row
+    .alpha.six.columns
+      .alpha.six.columns
+        %fieldset.tax_categories.no-border-bottom
+          = f.field_container :tax_categories do
+            = f.select :tax_category_id, @tax_categories.map { |tc| [tc.name, tc.id] }, {}, :class => "select2 fullwidth"
+            = error_message_on :shipping_method, :tax_category_id
+
+  .row
     .alpha.eleven.columns
       %fieldset.categories.no-border-bottom
         %legend{align: "center"}= t('.categories')
