--- a/app/assets/javascripts/templates/partials/shop_variant_no_group_buy.html.haml
+++ b/app/assets/javascripts/templates/partials/shop_variant_no_group_buy.html.haml
@@ -1,11 +1,11 @@
 .small-5.medium-3.large-3.columns.variant-quantity-column.text-right{"ng-if" => "::!variant.product.group_buy"}
 
-  .variant-quantity-inputs{ng: {if: "!variant.line_item.quantity"}}
+  .variant-quantity-inputs{ng: {if: "variant.line_item.quantity == 0"}}
     %button.add-variant{type: "button", ng: {click: "add(1)", disabled: "!canAdd(1)"}}
       {{ "js.shopfront.variant.add_to_cart" | t }}
 
-  .variant-quantity-inputs{ng: {if: "variant.line_item.quantity"}}
-    %button.variant-quantity{type: "button", ng: {click: "add(-1)"}}>
+  .variant-quantity-inputs{ng: {if: "variant.line_item.quantity != 0"}}
+    %button.variant-quantity{type: "button", ng: {click: "add(-1)", disabled: "!canAdd(-1)"}}>
       -# U+FF0D Fullwidth Hyphen-Minus
       －
     %input.variant-quantity{type: "number", min: "0", max: "{{ available() }}", ng: {model: "variant.line_item.quantity"}}>
