--- a/app/assets/stylesheets/darkswarm/_shop-navigation.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-navigation.scss
@@ -154,21 +154,23 @@ shop ordercycle {
     }
   }
 
+  .select-and-closing-container {
+    @include breakpoint(desktop) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  }
+
   closing {
     color: $white;
     padding: 0 0 12px;
 
     @include breakpoint(desktop) {
-      float: none;
-      display: inline-block;
-      padding: 0.2em 0 0;
+      padding: 0;
       font-size: 1.2em;
       margin-right: 1em;
-    }
-
-    @include breakpoint(tablet) {
-      float: none;
-      padding: 0;
     }
   }
 
