--- a/app/assets/javascripts/templates/admin/panels/exchange_products_panel_footer.html.haml
+++ b/app/assets/javascripts/templates/admin/panels/exchange_products_panel_footer.html.haml
@@ -6,6 +6,6 @@
 
 .sixteen.columns.alpha#loading{ 'ng-show' => 'productsLoading()' }
   %br
-  {{ = render partial: "components/loading" }}
+  %img.spinner{ src: "/assets/spinning-circles.svg" }
   %h1
     {{ 'js.admin.panels.exchange_products.loading_variants' | t }}
