--- a/app/views/components/_loading.html.haml
+++ b/app/views/components/_loading.html.haml
@@ -1,1 +1,1 @@
-%img.spinner{ src: image_path("spinning-circles.svg") }
+%img.spinner{ src: image_path("spinning-circles.svg"), style: "max-width: 100%" }
