Removed #secure and replaced with class

--- a/app/assets/stylesheets/darkswarm/footer.scss
+++ b/app/assets/stylesheets/darkswarm/footer.scss
@@ -107,10 +107,10 @@ footer {
         color: rgba($disabled-med, 0.35);
       }
 
-      #secure {
+      p.text-big {
         font-size: 1.5rem;
         font-weight: 300;
-      }		
+      }
 
       .social-icons {
         margin-bottom: 0.9rem;
