Removed #secure and replaced with class

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -15,7 +15,7 @@
         %p.secure-icon
           %i.ofn-i_017-locked
       .small-12.medium-6.columns.text-center
-        %p.secure-text#secure
+        %p.text-big.secure-text
           = t '.footer_secure'
         %p.secure-text
           = t '.footer_secure_text'
