Remove passing of unused variable

--- a/app/views/checkout/_form.html.haml
+++ b/app/views/checkout/_form.html.haml
@@ -15,7 +15,7 @@
   = render "checkout/shipping", f: f
   = render "checkout/payment", f: f
   = render "checkout/already_ordered", f: f if show_bought_items?
-  = render "checkout/terms_and_conditions", f: f
+  = render "checkout/terms_and_conditions"
   %p
     %button.button.primary{ type: :submit, ng: { disabled: "terms_and_conditions_activated && !terms_and_conditions_accepted" } }
       = t :checkout_send
