--- a/app/views/checkout/_form.html.haml
+++ b/app/views/checkout/_form.html.haml
@@ -16,6 +16,7 @@
   = render "checkout/payment", f: f
   = render "checkout/already_ordered", f: f if show_bought_items?
   = render "checkout/terms_and_conditions"
+  = render "checkout/platform_terms_of_service" if platform_terms_required?
   %p
     %button.button.primary{ type: :submit, ng: { disabled: "terms_and_conditions_activated && !terms_and_conditions_accepted" } }
       = t :checkout_send
