--- a/app/views/spree/shared/_payment.html.haml
+++ b/app/views/spree/shared/_payment.html.haml
@@ -4,7 +4,7 @@
       - if !@order.new_outstanding_balance.zero?
         = @order.new_outstanding_balance.negative? ? t(:credit_owed) : t(:balance_due)
         \:
-        %strong= @order.display_new_outstanding_balance
+        %strong= Spree::Money.new(@order.new_outstanding_balance, currency: @order.currency)
       - else
         - if @order.paid?
           = t :email_payment_paid
