--- a/app/views/spree/shared/_payment.html.haml
+++ b/app/views/spree/shared/_payment.html.haml
@@ -1,17 +1,17 @@
 %p.callout
   %span{:style => "float:right;"}
+    - balance = OrderBalance.new(@order)
     - if OpenFoodNetwork::FeatureToggle.enabled?(:customer_balance, @order.user)
       - if !@order.new_outstanding_balance.zero?
-        = @order.new_outstanding_balance.negative? ? t(:credit_owed) : t(:balance_due)
+        = balance.state
         \:
-        %strong= Spree::Money.new(@order.new_outstanding_balance, currency: @order.currency)
+        %strong= balance.amount
       - else
         - if @order.paid?
           = t :email_payment_paid
         - else
           = t :email_payment_not_paid
     - else
-      - balance = OrderBalance.new(@order)
       - if !@order.outstanding_balance.zero?
         = balance.state
         \:
