--- a/app/views/spree/admin/payments/index.html.haml
+++ b/app/views/spree/admin/payments/index.html.haml
@@ -2,7 +2,7 @@
 = render partial: 'spree/admin/shared/order_tabs', locals: { current: 'Payments' }
 
 - content_for :page_actions do
-  - if @order.outstanding_balance?
+  - if !@balance.zero?
     %li#new_payment_section
       = button_link_to t(:new_payment), new_admin_order_payment_url(@order), icon: 'icon-plus'
   = render partial: 'spree/admin/shared/order_links'
