--- a/app/views/spree/admin/payments/new.html.haml
+++ b/app/views/spree/admin/payments/new.html.haml
@@ -14,7 +14,7 @@
   = form_for @payment, url: admin_order_payments_path(@order), html: {"ng-app" => "admin.payments", "ng-controller" => "PaymentCtrl"} do |f|
     %save-bar{ persist: "true" }
     %fieldset.no-border-top
-      = render partial: 'form', locals: { f: f }
+      = render partial: 'form', locals: { f: f, balance: @balance }
       .filter-actions.actions
         = button_tag t(:update), type: 'button', "ng-click" => "submitPayment()"
 
