Enable checkout button only when terms accepted
This was working with the seller's terms but now it includes the
platform's terms as well.

Pending:

- Simplify Ansible code
- Unify the two terms checkboxes if both required

--- a/app/views/checkout/_form.html.haml
+++ b/app/views/checkout/_form.html.haml
@@ -18,6 +18,6 @@
   = render "checkout/terms_and_conditions"
   = render "checkout/platform_terms_of_service" if platform_terms_required?
   %p
-    %button.button.primary{ type: :submit, ng: { disabled: "terms_and_conditions_activated && !terms_and_conditions_accepted" } }
+    %button.button.primary{ type: :submit, ng: { disabled: "(terms_and_conditions_activated && !terms_and_conditions_accepted) || platform_tos_accepted == false" } }
       = t :checkout_send
     / {{ checkout.$valid }}
