--- a/app/views/checkout/_form.html.haml
+++ b/app/views/checkout/_form.html.haml
@@ -15,8 +15,7 @@
   = render "checkout/shipping", f: f
   = render "checkout/payment", f: f
   = render "checkout/already_ordered", f: f if show_bought_items?
-  = render "checkout/terms_and_conditions"
-  = render "checkout/platform_terms_of_service" if platform_terms_required?
+  = render_terms_and_conditions
   %p
     %button.button.primary{ type: :submit, ng: { disabled: "terms_and_conditions_accepted == false || platform_tos_accepted == false" } }
       = t :checkout_send
